# pact-contract-testing-example

./: .env  .gitignore  Cargo.toml
pact_contracts/: User Consumer Service-User Provider Service.json
user_consumer/: Cargo.toml
user_consumer/src/: lib.rs  main.rs
user_consumer/tests/: contract_test.rs
user_provider/: Cargo.toml
user_provider/src/: lib.rs  main.rs
