[package]
name = "user_consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
user_provider =  { version = "0.1.0", path = "../user_provider" }
serde_json = "1.0.85"
tokio = { version = "1.21.1",  features = ["full", "macros"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }

[dev-dependencies]
pact_consumer = "0.9.7"
chrono = { version = "0.4.22", features = ["serde"] }