[package]
name = "user_provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.5.0"
chrono = { version = "0.4.22", features = ["serde"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
serde = "1.0.145"
serde_derive = "1.0.145"